--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --optimize",
+    "build": "webpack --optimize --host 192.168.0.5",
     "start": "webpack-dev-server"
   },
   "repository": {
@@ -30,6 +30,7 @@
     "css-loader": "^0.25.0",
     "html-webpack-plugin": "^2.24.1",
     "node-sass": "^3.11.2",
+    "postcss-loader": "^1.1.0",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.3",
