--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --optimize --host 192.168.0.5",
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server --display-error-details"
   },
   "repository": {
     "type": "git",
